<resources>
    <string name="app_name">图书管理系统</string>
    <string name="top_name">登录</string>
    <string name="hint_username">账号</string>
    <string name="hint_userpasswd">密码</string>
    <string name="btn_login">登录</string>
    <string name="newuser">新用户注册</string>
    <string name="top_register">注册</string>
    <string name="hint_registername">请输入注册账户</string>
    <string name="hint_registerpasswd">请输入注册密码</string>
    <string name="btn_register">注册</string>
    <string name="btn_back">返回</string>
    <string name="top_add">添加图书</string>
    <string name="hint_addbooks">请输入书名</string>
    <string name="hint_addauthor">请输入作者</string>
    <string name="hint_addprice">请输入价格</string>
    <string name="btn_add">添加</string>
    <string name="btn_abandon">放弃</string>
    <string name="top_main">主界面</string>
    <string name="top_update">更新图书</string>
    <string name="hint_updatebooks">请输入书名</string>
    <string name="hint_updateauthor">请输入作者</string>
    <string name="hint_updateprice">请输入价格</string>
    <string name="btn_update">更新</string>
    <string name="top_query">查询图书</string>
    <string name="hint_querybooks">请输入要查询的书名</string>
    <string name="btn_search">搜索</string>
    <string name="top_querylistview">查询结果</string>
    <string name="t_id">编号</string>
    <string name="t_name">书名</string>
    <string name="t_author">作者</string>
    <string name="t_price">价格</string>
    <string name="top_delete">删除图书</string>
    <string name="hint_deletebooks">请输入要删除的书名</string>
    <string name="top_head">开发者个人信息</string>
    <string name="text_back">返回</string>
    <string name="text_forward">在线搜索</string>
    <string name="bookImage">图书图片</string>
    <string name="textViewDefault">测试测试测试测试</string>
    <string name="bookshelf">书架</string>
    <string name="store">书城</string>
    <string name="my">我的</string>
    <string name="addToBookShelf">添加到书架</string>
    <string name="removeFromShelf">从书架移除</string>
    <string name="userNumber">会员编号:</string>
    <string name="phoneNumber">电话号码：</string>
    <string name="area">地区：</string>
    <string name="sex">性别：</string>
    <string name="readOnline">在线阅读</string>
    <string name="editUserInfo">修改信息</string>
    <string name="username">用户名:</string>
    <string name="newPassword">新密码:</string>
    <string name="repeatPassword">重复密码:</string>
    <string name="phone">电话：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="submitChange">确认修改</string>
    <string name="registerPhone">请输入电话号码</string>
    <string name="registerArea">请输入地区</string>
    <string name="registerSex">请输入性别</string>
    <!--<string name="onlineSearch">在线搜索</string>-->
    <string name="localSearch">本地搜索</string>
    <string name="onlineSearch">在线搜索</string>
    <string name="wpingjia">撰写评价</string>
    <string name="pleaseEvaluation">请输入对此书的个人评价</string>
    <string name="borrowOut">出借</string>
    <string name="bringBack">收回</string>
</resources>
