<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MyFragment"
    android:background="@drawable/text_view_boder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/text_view_boder"
        android:orientation="horizontal">

        <ImageView
            style="@style/textviewStyle"
            android:id="@+id/touxiang"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_head" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/text_view_boder">
            <!-- 昵称-->
            <TextView
                style="@style/textviewStyle"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textViewDefault"
                android:textSize="20sp" />
            <!-- 编号-->
            <TextView
                style="@style/textviewStyle"
                android:id="@+id/userId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userNumber"
                android:background="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_boder"
        android:orientation="vertical">
        <!-- 电话号-->
        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            style="@style/textviewStyle"
            android:paddingTop="12dp"
            android:text="@string/phoneNumber"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"/>
        <!--地区-->
        <TextView
            android:id="@+id/area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="12dp"
            style="@style/textviewStyle"
            android:text="@string/area"
            android:textSize="17sp" />
        <!--性别-->
        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textviewStyle"
            android:paddingTop="12dp"
            android:text="@string/sex"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_boder"
        android:orientation="vertical"
        android:paddingTop="12dp">
    <Button
        android:id="@+id/editInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="12dp"
        android:text="@string/editUserInfo"
        android:typeface="sans"
        style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>
</LinearLayout>