<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserActivity"
    android:background="@drawable/blue">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center">

        <LinearLayout
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TableRow
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="用户名"  />

                    <TextView
                        android:layout_marginLeft="50dp"
                        android:textSize="18sp"
                        android:id="@+id/usernameText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />
                </TableRow>

                <TableRow
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/newPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/newPassword" />
                    <EditText
                        android:textSize="18sp"
                        android:id="@+id/newPasswordEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPassword" />
                </TableRow>


                <TableRow
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/repeatPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repeatPassword" />

                    <EditText
                        android:textSize="18sp"
                        android:id="@+id/repeatPasswordEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text= "性别" />

                    <RadioGroup
                        android:layout_marginLeft="50dp"
                        android:id="@+id/sexGroup"
                        android:layout_width="113dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        >

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textSize="18sp" />
                    </RadioGroup>
                </TableRow>
                <TableRow
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone" />

                    <EditText
                        android:textSize="18sp"
                        android:id="@+id/phoneEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="phone" />
                </TableRow>
                <TableRow
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/area" />

                    <EditText
                        android:textSize="18sp"
                        android:id="@+id/areaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="" />

                </TableRow>
                <Button
                    android:typeface="sans"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/submitChange"
                    android:textSize="18sp" />
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>